Fixed file uploads, improved code readability, commented everything out ready for the lesson.

--- a/public/style.css
+++ b/public/style.css
@@ -37,6 +37,10 @@ h1 {
 	padding:0px;
 }
 
+img {
+	max-width:600px;
+}
+
 #postsBox{
 	position:relative;
 	width:90%;
